I added the file functions.php and modified the file index.php and style.css

--- a/style.css
+++ b/style.css
@@ -10,3 +10,7 @@ Licese URI: www.gnu.org/licenses/gp1-2.0.html
 Tags: restaurant, mobile first, responsive, pizza;
 Text Domain: lapizzeria
 */
+
+body{
+	background: red;
+}
