I added normalize.css , modified the background color for do one experiment and i learned like use the function wp_register_style

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ Licese URI: www.gnu.org/licenses/gp1-2.0.html
 Tags: restaurant, mobile first, responsive, pizza;
 Text Domain: lapizzeria
 */
-
-body{
-	background: red;
+body {
+	background-color: blue;
 }
