--- a/style.css
+++ b/style.css
@@ -10,3 +10,89 @@ Licese URI: www.gnu.org/licenses/gp1-2.0.html
 Tags: restaurant, mobile first, responsive, pizza;
 Text Domain: lapizzeria
 */
+
+html {
+	box-sizing: border-box;
+}
+*, *:before, *:after{/*Para que todos hereden la propiedad*/
+	box-sizing: inherit;
+}
+
+.contenedor {
+	max-width: 1100px;
+	width: 100%;
+	margin: 0 auto;
+}
+
+/** ENCABEZADO **/
+header.encabezado-sitio {
+	border-bottom: 1px solid #c1c1c1;
+}
+div.logo {
+	text-align: center;
+}
+img.logotipo{
+	width: 250px;
+}
+
+@media only screen and (min-width: 768px) {
+	div.logo {
+		text-align: center;
+	}	
+}
+
+@media only screen and (min-width: 962px) {
+	div.logo {
+		text-align: left;
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	header.encabezado-sitio .contenedor{
+		position: relative;
+	}
+
+	.informacion-encabezado {
+		position: absolute;
+		top: 0;
+		right: 0;
+	}
+
+	div.direccion p{
+		text-align: right;
+	}	
+}
+
+/*** MENU REDES SOCIALES ***/
+
+
+nav.sociales ul {
+	text-align: center;
+	list-style: none;
+	padding: 0;
+}
+
+@media only screen and (min-width:768px){
+	nav.sociales ul {
+		float: right;
+	}
+}
+
+nav.sociales ul li {
+	position: relative;
+	display: inline-block; /*Para que ponga las redes sociales una al lado de la otra*/
+}
+
+nav.sociales ul li a:before{
+	font-family: 'FontAwesome';
+	display: inline-block;
+	vertical-align: top;
+	padding: 0 5px;
+	content: '\f08e';
+	font-size: 30px;
+	color: #000000;
+	-webkit-font-smoothing antialiased;
+}
+
+
+
