--- a/style.css
+++ b/style.css
@@ -18,6 +18,30 @@ html {
 	box-sizing: inherit;
 }
 
+body {
+	font-family: 'Open Sans', sans-serif;
+}
+
+h1, h1, h3, h4, h5, h6{
+	font-family: 'Raleway', sans-serif;
+	font-weight: 900;
+}
+
+h1{
+	font-size: 44px;
+}
+
+h2{
+	font-size: 	40px;
+}
+
+h3{
+	font-size: 28px;
+}
+
+h4{
+	font-size: 24px;
+}
 .contenedor {
 	max-width: 1100px;
 	width: 100%;
