Le di estilos al foooter y subí varias imagenes

--- a/style.css
+++ b/style.css
@@ -284,3 +284,45 @@ div.principal {
 	font-size: 18px;
 	line-height: 50px;/*Espacio entre cada renglon*/
 }
+
+
+/** FOOTER **/
+footer {
+	margin-top: 30px;
+	padding: 50px 0;
+	border-top: 1px solid #c1c1c1;
+	text-align: center;
+}
+
+footer nav ul {
+	list-style: none;
+}
+
+footer nav ul li{
+	display: inline;
+}
+
+footer nav ul li:last-child .separador{
+	display: none; /*Con last-child ocultamos el ultimo separado que va después de el menú de contacto*/
+}
+
+footer nav ul li a {
+	color: #000000;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 16px;
+	text-decoration: none;
+}
+
+footer .ubicacion {
+	margin-top: 20px;
+}
+
+footer p{
+	margin: 0 0 5px 0;
+	font-size: 14px;
+}
+
+footer p.copyright{
+	margin-top: 30px;
+}
