--- a/style.css
+++ b/style.css
@@ -53,6 +53,9 @@ h4{
 .texto-rojo{
 	color: #a61206;
 }
+.texto-centrado{
+	text-align: center;
+}
 
 .contenedor {
 	max-width: 1100px;
@@ -60,8 +63,8 @@ h4{
 	margin: 0 auto;
 }
 
-.texto-centrado{
-	text-align: center;
+img {
+	max-width: 100%
 }
 
 /** ENCABEZADO **/
@@ -439,5 +442,31 @@ div.texto-especialidad p{
 	.contenedor-grid{
 		margin-left: -10px;
 		margin-right: -10px;
+	}
+	.contenedor-grid::after{
+		content:'';
+		display: block;
+		clear: both;
+	}
+	[class*="columnas"]{
+		padding: 0 10px;
+		float: left;
+	}
+	
+	.columnas1-4{
+		width: 25%;
+	}
+
+	.columnas2-4{
+		width: 50%;
+	}
+	.columnas3-4{
+		width: 75%;
+	}
+	.columnas1-3{
+		width: 33.3%;
+	}
+	.columnas2-3{
+		width: 66.6%;
 	}
 }
