Se dio estilos a los widgets

--- a/style.css
+++ b/style.css
@@ -157,7 +157,8 @@ nav.sociales ul {
 	}
 }
 
-.sr-text{
+.sr-text,
+.screen-reader-text {
 	display: none;
 }
 
@@ -548,4 +549,65 @@ p.autor i {
 div.contenido-entrada p{
 	margin-bottom: 0;
 	line-height: 24px;/*Para que no se vea el contenido tan separado*/
+}
+
+/*	SIDEBAR  */
+aside.sidebar {
+	margin-top: 3px;
+}
+
+form.searchform {/*Esta clase la crea wordpress y esta en el formulario de buscar*/
+	position: relative;
+}
+
+form.searchform #searchsubmit {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 42px;
+	height: 42px;
+	background-color: #a61206;
+	text-indent: -9999px;
+	background-image: url(img/buscador.png);
+	background-repeat: no-repeat;
+	background-position: center center;
+	border: none;
+	cursor: pointer;
+}
+
+form.searchform input {
+	width: 100%;
+	padding: 10px;
+}
+
+aside .widget {
+	margin-bottom: 20px;
+}
+
+aside .widget h3 {
+	font-weight: 700;
+	font-size: 24px;
+	text-transform: uppercase;
+}
+
+aside .widget ul {
+	list-style: none;
+}
+
+aside .widget ul li{
+	margin-bottom: 20px;
+}
+
+aside .widget ul li a {
+	color: #000000;
+	text-decoration: none;
+}
+
+aside .widget ul li a {
+	color: #000000;
+	text-decoration: none;
+}
+
+aside .widget ul li a:hover {
+	color: #f19f30;
 }
