Se le dio estilos al text area y los labels

--- a/style.css
+++ b/style.css
@@ -43,7 +43,9 @@ h4{
 	font-size: 24px;
 }
 
-.button {
+.button,
+div.comentarios form input[type='submit'] {
+	background-color: #a61206;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
 	width: auto;
@@ -54,6 +56,7 @@ h4{
 	display: inline-block;
 	text-decoration: none;
 	transition: all .5s ease;
+	cursor: pointer;
 }
 
 .button.rojo {
@@ -221,7 +224,8 @@ nav.menu-sitio ul li a {
 	text-transform: uppercase;
 	color: #000000;
 }
-nav.menu-sitio ul li.current_page_item a{
+nav.menu-sitio ul li.current_page_item a,
+nav.menu-sitio ul li.current_page_parent a{
 	border-bottom: 8px solid #a61206;
 }
 nav.menu-sitio ul li:hover {
@@ -610,4 +614,40 @@ aside .widget ul li a {
 
 aside .widget ul li a:hover {
 	color: #f19f30;
+}
+
+/**  COMENTARIOS  **/
+
+div.comentarios h3 {
+	font-weight: 700;
+	text-align: center;
+}
+
+@media only screen and (min-width: 992px){
+	div.comentarios{
+		width: 60%;
+	}
+}
+
+div.comentarios form label {
+	width: 200px;
+	display: inline-block;
+	text-align: right;
+	padding-right: 20px;
+}
+
+div.comentarios form input,
+div.comentarios form textarea {
+	padding: 10px;
+	width: calc(100% - 220px);	
+}
+
+div.comentarios form input[type='submit']{
+	margin: 0 auto;
+	display: block;
+	border: none;
+}
+
+p.logged-in-as a {
+	color: #a61206;
 }
