Se le dio estilos a las publicaciones hechas en el blog

--- a/style.css
+++ b/style.css
@@ -560,6 +560,32 @@ ul.lista-comentarios ul {
 	list-style: none;
 }
 
+ul.lista-comentarios li.comment {
+	background-color: #e1e1e1;
+	padding: 20px;
+	margin-bottom: 20px;
+	border-radius: 20px;
+}
+
+ul.lista-comentarios li.comment cite {
+	color: #a61206;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+ul.lista-comentarios li.comment .comment-author{
+	margin-bottom: 20px;
+}
+
+ul.lista-comentarios li.comment a{
+	color: #a61206;
+	text-decoration: none;
+}
+
+ul.lista-comentarios li.comment ul.children li{
+	background-color: white;
+	margin-top: 20px;
+}
 /*	SIDEBAR  */
 aside.sidebar {
 	margin-top: 3px;
