--- a/style.css
+++ b/style.css
@@ -723,3 +723,66 @@ div#gallery-1 .gallery-item {
 div#gallery-1 .gallery-item .gallery-icon {
 	padding: 5px;
 }
+
+div#gallery-1 img {
+	border: none;
+}
+
+/**  CONTACTO  **/
+
+div.contacto {
+	background-image: url(img/contacto1.jpg);
+	background-repeat: no-repeat;
+	background-position: top left;
+}
+
+@media only screen and (min-width: 768px){
+	form.reserva-contacto {
+		margin-left: 50%;
+	}
+}
+
+form.reserva-contacto h2 {
+	font-size: 20px;
+	font-weight: 700;
+}
+
+form.reserva-contacto .campo {
+	margin-bottom: 20px;
+	width: 100%;
+}
+
+form.reserva-contacto .campo input,
+form.reserva-contacto .campo textarea {
+	width: 100%;
+	border: 3px solid #000000;
+	padding: 20px 10px;
+}
+
+form.reserva-contacto .campo textarea {
+	height: 200px;
+}
+
+/** DANDOLE ESTILOS A LOS PLACEHOLDER **/
+
+form.reserva-contacto ::-webkit-input-placeholder{
+	color: #000000!!important;
+}
+
+form.reserva-contacto :moz-placeholder{
+	color: #000000!!important;
+}
+
+form.reserva-contacto ::moz-placeholder{
+	color: #000000!!important;
+}
+
+form.reserva-contacto ::-ms-input-placeholder{
+	color: #000000!!important;
+}
+
+form.reserva-contacto input[type="submit"]{
+	border: none;
+	margin: 0 auto;
+	display: block;
+}
