Se le siguio dando estilos a front-page

--- a/style.css
+++ b/style.css
@@ -63,6 +63,14 @@ div.comentarios form input[type='submit'] {
 	background-color: #a61206;
 }
 
+.button.naranja{
+	background-color: #f19f30;
+}
+
+.button.naranja:hover{
+	background-color: #a61206;
+}
+
 .button:hover{
 	background-color: #f19f30;
 }
@@ -275,6 +283,7 @@ div.hero{
 	display: table;
 	position: relative;
 }
+
 
 div.hero::after{
 	/*El position: absolute es por el position:relative que tenemos arriba*/
@@ -785,4 +794,26 @@ form.reserva-contacto input[type="submit"]{
 	border: none;
 	margin: 0 auto;
 	display: block;
+}
+
+/**		FRONT PAGE	**/
+
+.home div.hero{
+	height: 550px;/*La imagen de inicio se vea mas grande*/
+}
+
+.home div.hero h1{
+	margin-top: 0;
+}
+
+.home .texto-hero p {
+	line-height: 40px;
+	font-size: 18px;
+}
+
+@media only screen and (min-width: 768px) {
+	.home .texto-hero{
+		max-width: 580px;
+		margin: 0 auto; /*El margin es por si el texto se va hacia la izquierda y no se centra*/
+	}
 }
